zakelijk fixed spacing between div's

--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -102,6 +102,7 @@
     line-height: 0;
     padding: 0;
     color: #fff;
+    cursor: pointer;
   }
 
   ///
@@ -319,14 +320,5 @@
       font-size: 15px;
     }
   }
-
-  // @media only screen and (max-height: 470px),
-  // screen and (max-width: 600px) {
-
-  //   .overlay a,
-  //   .overlay .far {
-  //     font-size: 17px;
-  //   }
-  // }
 
 }
