--- a/src/styles/Zakelijk.scss
+++ b/src/styles/Zakelijk.scss
@@ -60,13 +60,13 @@
 
   .bulletpoints {
     position: relative;
-    height: 400px;
+    // height: 400px;
     background: white;
     z-index: 1;
+    padding: 60px 0;
 
-    // top: -75px;
     .content {
-      padding-top: 75px;
+      position: relative;
 
       .img_gallery {
         display: flex;
@@ -84,8 +84,9 @@
           }
 
           .text {
+            margin-top: 10px;
             position: relative;
-            bottom: -50px;
+            // bottom: -50px;
             word-wrap: break-word;
 
             h3 {
@@ -104,6 +105,7 @@
       position: absolute;
       width: 100%;
       height: 50px;
+      top: 0;
       // z-index: 1;
       // background: #000;
     }
@@ -132,7 +134,8 @@
 
   .why_co2ok {
     position: relative;
-    height: 1050px;
+    // height: 1050px;
+    padding: 60px 0;
     width: 100%;
     background: $grey;
 
@@ -155,7 +158,6 @@
 
     .why_co2ok_content {
       width: 70% !important;
-      position: absolute;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -172,7 +174,7 @@
           display: flex;
           flex-direction: row;
           justify-content: space-evenly;
-          padding-bottom: 20px;
+          padding: 10px 0;
 
           .content_text {
             width: 880px;
@@ -221,14 +223,14 @@
 
   .partners {
     position: relative;
-    height: 600px;
+    // height: 600px;
 
     .content {
-      padding-top: 50px;
+      padding: 60px 0;
 
       .text {
-        margin-top: 10px;
-        margin-bottom: 10px;
+        // margin-top: 10px;
+        // margin-bottom: 10px;
         text-align: center;
       }
 
@@ -261,7 +263,8 @@
 
   .block_form {
     position: relative;
-    height: 650px;
+    // height: 650px;
+    padding: 60px 0;
     width: 100%;
     text-align: center;
     background: $grey;
@@ -374,7 +377,7 @@
 
           // margin-top: 50px;
           .text {
-            padding-top: 20px;
+            // padding-top: 20px;
             margin: 0 auto;
             width: 60%;
           }
@@ -387,7 +390,7 @@
     }
 
     .why_co2ok {
-      height: 650px !important;
+      // height: 650px !important;
 
       .why_co2ok_content {
         text-align: center;
@@ -430,7 +433,7 @@
     }
 
     .block_form {
-      height: 1000px !important;
+      // height: 1000px !important;
 
       .content {
         .form {
